Fix most spacing on store info section

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,19 @@
   margin: auto;
 }
 
+.container {
+  background-color: #F8EBE6;
+  width: 1300px;
+  padding: 24px 30px 48px 30px;
+  margin-bottom: 36px;
+}
+
+.shop-overview {
+  display: grid;
+  grid-template-columns: minmax(min-content, 330px) minmax(600px, 1000px)
+  /* grid-template-columns: 1fr 3fr; */
+}
+
 .heavy-weight {
   font-weight: bold;
 }
@@ -61,18 +74,6 @@
   height: 50px;
 }
 
-.container {
-  background-color: #F8EBE6;
-  width: 1300px;
-  padding: 24px 30px 48px 30px;
-  margin-bottom: 36px;
-}
-
-.shop-overview {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-}
-
 .store-logo {
   height: 156px;
   width: 156px;
@@ -90,6 +91,7 @@
   height: 186px;
   width: 234px;
   overflow: hidden;
+  margin-bottom: 6px;
 }
 
 .listing-image {
@@ -98,17 +100,20 @@
 }
 
 .more-from {
-  margin-bottom: 6px;
+  margin-bottom: 24px;
   padding-top: 9px;
 }
 
 .shop-stats {
   display: grid;
-  grid-template-columns: 30% 70%;
+  /* grid-template-columns: 30% 70%; */
+  grid-template-columns: 90px 150px;
+  margin-bottom: 18px;
 }
 
 .stats-box {
   justify-self: start;
+  margin-right: 24px;
 }
 
 .store-products > ul {
@@ -164,7 +169,7 @@
 .currency-value, .currency-symbol {
   font-family: "Graphik Webfont","Roboto","Droid Sans","Segoe UI","Helvetica",Arial,sans-serif;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: bold;
   line-height: 20px;
 }
 
@@ -179,3 +184,32 @@
   white-space: nowrap;
 }
 
+.text-title {
+  font-family: "Graphik Webfont","Roboto","Droid Sans","Segoe UI","Helvetica",Arial,sans-serif;
+  box-sizing: border-box;
+  display: block;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 20px;
+  margin-block-end: 6px;
+  margin-block-start: 0px;
+  margin: 0px 0px 6px 0px;
+  margin-inline-end: 0px;
+  margin-inline-start: 0px;
+  text-align: left;
+  text-size-adjust: 100%
+}
+
+.link:hover {
+  text-decoration: underline;
+}
+
+.arrow {
+  display: inline-block;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.arrow:hover {
+  margin-left: 20px
+}
